--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -56,7 +56,7 @@
                                 <div class="hover-content">
                                     <h3>Mridul chaturvedi</h3>
                                     <p>follow /reach me on linkdin or instagram </p>
-                                    <a href="#!" target="blank" rel="noopener"><img src="{% static 'media/linkedin.svg' %}" class="team-icon"></a> <a href="https://www.instagram.com/the_bitch_detector_/" target="blank" rel="noopener"><img src="{% static 'media/instagram.svg' %}" class="team-icon"></a>
+                                    <a href="https://www.linkedin.com/in/mridul-chaturvedi-227560196/" target="blank" rel="noopener"><img src="{% static 'media/linkedin.svg' %}" class="team-icon"></a> <a href="https://www.instagram.com/the_bitch_detector_/" target="blank" rel="noopener"><img src="{% static 'media/instagram.svg' %}" class="team-icon"></a><a href="https://www.kaggle.com/pythonyoda/account" target="blank" rel="noopener"><img src="{% static 'media/kaggle-icon.svg' %}" class="team-icon"></a>
                                 </div>
                             </div>
                         </div>
@@ -107,7 +107,7 @@
                                 <div class="hover-content">
                                     <h3>{{item.title}}</h3>
                                     <p>{{ item.mindes }}</p>
-                                    <a href=""><button class="light">have a look</button></a>
+                                    <a href="{{ item.urls }}"><button class="light">have a look</button></a>
                                 </div>
                             </div>
                         </div>
