--- a/index/templates/index/certificates.html
+++ b/index/templates/index/certificates.html
@@ -47,90 +47,31 @@
             </div>
 
         </div>
-        {% for items in certs %}
+        {% for item in certs %}
         <div class="row">
 
-            <div class="col-md-1">
-                <p><i class="fa fa-camera fa-4x"></i>
-                </p>
-            </div>
+            
             <div class="col-md-5">
-                <a href="blog-post.html">
+                
                     <img src="{{ item.image }}" class="img-responsive">
-                </a>
+              
             </div>
             <div class="col-md-6">
-                <h3><a href="blog-post.html">{{ item.title }}</a>
-                </h3>
+                <h2><a href="blog-post.html">{{ item.title }}</a>
+                </h2>
                 <p>by <a href="#">{{ item.by }}</a>
                 </p>
-                <p>{{ item.mindes }}</p>
+                <h3><p>{{ item.mindes }}</h3></p>
             </div>
 
         </div>
+        <hr>
         {% endfor %}
-        <hr>
-
-        <div class="row">
-
-            <div class="col-md-1">
-                <p><i class="fa fa-film fa-4x"></i>
-                </p>
-                <p>May 24, 2013</p>
-            </div>
-            <div class="col-md-5">
-                <a href="blog-post.html">
-                    <img src="http://placehold.it/600x300" class="img-responsive">
-                </a>
-            </div>
-            <div class="col-md-6">
-                <h3><a href="blog-post.html">A Blog Home Template for Bootstrap 3</a>
-                </h3>
-                <p>by <a href="#">Start Bootstrap</a>
-                </p>
-                <p>This is a very basic starter template for a blog homepage. It makes use of Font Awesome icons that are built into the 'Modern Business' template, and it makes use of the Bootstrap 3 pager at the bottom of the page.</p>
-                <a class="btn btn-primary" href="blog-post.html">Read More <i class="fa fa-angle-right"></i></a>
-            </div>
-        </div>
 
         <hr>
+      
 
-        <div class="row">
-
-            <div class="col-md-1">
-                <p><i class="fa fa-file-text fa-4x"></i>
-                </p>
-                <p>May 24, 2013</p>
-            </div>
-            <div class="col-md-5">
-                <a href="blog-post.html">
-                    <img src="http://placehold.it/600x300" class="img-responsive">
-                </a>
-            </div>
-            <div class="col-md-6">
-                <h3><a href="blog-post.html">A Blog Home Template for Bootstrap 3</a>
-                </h3>
-                <p>by <a href="#">Start Bootstrap</a>
-                </p>
-                <p>This is a very basic starter template for a blog homepage. It makes use of Font Awesome icons that are built into the 'Modern Business' template, and it makes use of the Bootstrap 3 pager at the bottom of the page.</p>
-                <a class="btn btn-primary" href="blog-post.html">Read More <i class="fa fa-angle-right"></i></a>
-            </div>
-        </div>
-
-        <hr>
-
-        <div class="row">
-
-            <ul class="pager">
-                <li class="previous"><a href="#">&larr; Older</a>
-                </li>
-                <li class="next"><a href="#">Newer &rarr;</a>
-                </li>
-            </ul>
-
-        </div>
-
-    </div>
+      
     <!-- /.container -->
 
     <div class="container">
@@ -140,7 +81,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Company 2013</p>
+                    <p>Copyright &copy; mridulchaturvedi 2022</p>
                 </div>
             </div>
         </footer>
