tweaked new styles

--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -125,7 +125,7 @@
                     <div class="row center-xs">
                         <div class="col-md">
                             <h2>Resume/Cv</h2>
-                            <p>Here is my Resume if you can Download in Pdf formate.</p>
+                            <p>Here is my Resume if you want just click button bellow and Download it in Pdf formate.</p>
                             <a href = "{% static 'media/MridulsResume.pdf' %}"  download><button class="light" >Downloade Resume</button></a>
                         </div>
                     </div>
