--- a/index/templates/index/certificates.html
+++ b/index/templates/index/certificates.html
@@ -26,7 +26,7 @@
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
                 </button>
-                <a class="navbar-brand" href="/index">Mridul Chaturvedi</a>
+                <a class="navbar-brand" href="">Mridul Chaturvedi</a>
             </div>
 
             <!-- /.navbar-collapse -->
@@ -41,7 +41,7 @@
             <div class="col-lg-12">
                 <h1 class="page-header">Certificates</h1>
                 <ol class="breadcrumb">
-                    <li><a href="/index">Home</a>
+                    <li><a href="">Home</a>
                     </li>
                 </ol>
             </div>
