everthing set up with no isssues

--- a/index/templates/index/certificates.html
+++ b/index/templates/index/certificates.html
@@ -57,7 +57,7 @@
               
             </div>
             <div class="col-md-6">
-                <h2><a href="blog-post.html">{{ item.title }}</a>
+                <h2><a href="{{ item.url }}">{{ item.title }}</a>
                 </h2>
                 <p>by <a href="#">{{ item.by }}</a>
                 </p>
