--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -72,9 +72,9 @@
             <div class="container">
                 <div class="row middle-md">
                     <div class="col-md-8">
-                        <h2>Extra certificates</h2>
-                        <p>there are some of courses i done from online plateforms like python,javascript,GO lang Etc</p>
-                        <a href=""><button class="light">have a look</button></a>
+                        <h2>Articles and reports by me</h2>
+                        <p>I love making Reportes and write articles on whatever ML and DS projects i make might help other students like me. In articles and posts i share what ever i got understood while doing that perticular project</p>
+                        <a href="blogs"><button class="light">Reports & artilces </button></a>
                     </div>
                     <div class="col-md-4">
                         <img src="{% static 'media/cta-display.png' %}" class="display">
